--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
+# Dependencies
+node_modules/
 /.pnp
 .pnp.*
 .yarn/*
@@ -10,32 +8,129 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
+# Testing
 /coverage
 
-# next.js
+# Next.js
 /.next/
 /out/
 
-# production
+# Production
 /build
+/dist
 
-# misc
-.DS_Store
-*.pem
+# Environment variables - ALL
+.env
+.env.local
+.env.development
+.env.development.local
+.env.test
+.env.test.local
+.env.production
+.env.production.local
+.env*.local
+*.env
+*.env.*
+.env*
 
-# debug
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
+# Vercel
 .vercel
 
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
+
+# OS
+.DS_Store
+*.swp
+*.swo
+*~
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+.code-workspace
+
+# Documentation files
+*.md
+!README.md
+
+# Shell scripts
+*.sh
+
+# Hardcoded credentials & configs
+*credentials*
+*secret*
+*password*
+*token*
+config.local.*
+config.*.local.*
+
+# Database dumps
+*.sql
+*.sqlite
+*.sqlite3
+*.db
+
+# Logs
+logs/
+*.log
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+
+# Backup files
+*.backup
+*.bak
+*.old
+
+# Sensitive JSON files
+*secret*.json
+*credentials*.json
+*config*.json
+!tsconfig.json
+!package.json
+!package-lock.json
+!components.json
+
+# Certificates & Keys
+*.pem
+*.key
+*.cert
+*.crt
+*.p12
+*.pfx
+
+# Archives
+*.zip
+*.tar
+*.gz
+*.rar
+
+# Media files (potentially sensitive)
+*.jpeg
+*.jpg
+*.png
+*.gif
+*.pdf
+*.mov
+*.mp4
+
+# Reports and reviews
+*REPORT*.json
+*REVIEW*.md
+*GUIDE*.md
+ARCHITECTURAL_REVIEW_REPORT.json
+COMPREHENSIVE_REVIEW.md
+QUICK_FIX_GUIDE.md
